fix logo layout shift

--- a/www/static/main.css
+++ b/www/static/main.css
@@ -41,6 +41,7 @@ body {
 }
 
 .sidebar header .logo img {
+  height: 3rem;
   width: 3rem;
 }
 
